fixed image link on line 32

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="header_search_button_wrapper">
                     <button class="header_search_button" type="submit">
-                        <img src="/home/julia/Site/img/icons/search-icon.png" alt="">
+                        <img src="img/icons/search-icon.png" alt="">
                     </button>
                 </div>
             </form>
@@ -55,16 +55,16 @@
                 </label>
                 <div class="tabs">
                     <div>
-                        <p>1111111111111111</p>
+                        <p>1</p>
                     </div>
                     <div>
-                        <p>2222222222222222</p>
+                        <p>2</p>
                     </div>
                     <div>
-                        <p>3333333333333333</p>
+                        <p>3</p>
                     </div>
                     <div>
-                        <p>4444444444444444</p>
+                        <p>4</p>
                     </div>
                 </div>
             </div>
