update navigation from header to main

--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
                 </div>
                 <div class="header_search_button_wrapper">
                     <button class="header_search_button" type="submit">
-                        <img src="/home/julia/Site/img/icons/search-icon.png" alt="">
+                        <img src="img/icons/search-icon.png" alt="">
                     </button>
                 </div>
             </form>
             <div class="header_telephone">+7(912) 345-67-89</div>
         </div>
-        <div class="header__nav">
-            <div class="header_nav">
+    </header>
+    <main>
+        <div class="main__nav">
+            <div class="main_nav">
                 <input type="radio" name="tabs" id="tab-nav-1" checked>
                 <label for="tab-nav-1">
                     <div class="tab-nav-1-container">Playstation</div>
@@ -55,23 +57,22 @@
                 </label>
                 <div class="tabs">
                     <div>
-                        <p>1111111111111111</p>
+                        <p>1</p>
                     </div>
                     <div>
-                        <p>2222222222222222</p>
+                        <p>2</p>
                     </div>
                     <div>
-                        <p>3333333333333333</p>
+                        <p>3</p>
                     </div>
                     <div>
-                        <p>4444444444444444</p>
+                        <p>4</p>
                     </div>
                 </div>
             </div>
         </div>
-    </header>
+    </main>
     <script src="main.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.6/prefixfree.min.js"></script>
 </body>
-
 </html>
