--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 </input>
                             </div>
 
-                            <p><textarea name="comment" placeholder="Комментраии к заказу" class="comment" id="comment"></textarea></p>
+                            <p><textarea name="comment" placeholder="Комментарии к заказу" class="comment" id="comment"></textarea></p>
                             <span class="form-caption">Покупатель</span>
                             <p><input type="text" name="telephone" required placeholder="Контактное лицо(ФИО)*" class="feedback_input" id="telephone"></p>
                             <p><input type="text" name="telephone" placeholder="E-mail" class="feedback_input" id="telephone"></p>
