--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
+    <link rel="icon" href="data:;base64,=">
     <title>Games Store - интернет-магазин приставок</title>
 </head>
 
@@ -60,15 +61,14 @@
                     </div>
                 </label>
                 <div class="tabs">
-                    <div id="tab-nav-1">
-                        <input type="button" onclick="add_PlaystationP()" value="добавить приставку" />
+                    <div id="tab-1">
+                        <!--input type="button" onclick="add_PlaystationP()" value="добавить приставку" /-->
                     </div>
-                    <div id="tab-nav-2">
+                    <div id="tab-2">
                     </div>
-                    <div id="tab-nav-3">
-                        <p>3</p>
+                    <div id="tab-3">
                     </div>
-                    <div id="tab-nav-4">
+                    <div id="tab-4">
                         <div class="basket">
                             <form id="feedback_form" class="feedback_form">
                                 <span class="form-caption">Контактный телефон<span class="red">*</span></span>
