--- a/src/client/index.html
+++ b/src/client/index.html
@@ -56,13 +56,12 @@
                 <input type="radio" name="tabs" id="tab-nav-4">
                 <label for="tab-nav-4">
                     <div class="tab-nav-4-container">
-                    	Корзина
+                    	<div class="basket-tab">Корзина </div>
                     	<img src="https://github.com/bmstu-iu9/utp2020-2-shop/raw/master/img/icons/basket-icon.png">
                     </div>
                 </label>
                 <div class="tabs">
                     <div id="tab-1">
-                        <!--input type="button" onclick="add_PlaystationP()" value="добавить приставку" /-->
                     </div>
                     <div id="tab-2">
                     </div>
