--- a/src/client/index.html
+++ b/src/client/index.html
@@ -128,7 +128,11 @@
                                 </p>
                             </form>
                             <div class="basket_contents">
-                                <h3>Список товаров</h3>
+                                <span class="form-caption list_of_products center">Список товаров</span>   
+                                <div class="empty_cart" id="empty_cart">Ваша корзина пуста!</div>
+                                <form id="list_of_items">
+                                    </form>
+                                <button class="clean_cart button-submit" id="clean_cart">Очистить корзину</button>
                             </div>
                         </div>
                     </div>
