изменение способа проверки пустоты корзины перед отправкой формы

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -124,11 +124,11 @@
                                     </p>
                                 </div>
                                 <p>
-                                    <button type="submit" class="button-submit" onclick="rename_it()">Подтвердить заказ</button>
+                                    <button type="submit" class="button-submit">Подтвердить заказ</button>
                                 </p>
                             </form>
                             <div class="basket_contents">
-                                <span class="form-caption list_of_products center">Список товаров</span>   
+                                <span class="form-caption list_of_products center">Список товаров</span>
                                 <div class="empty_cart" id="empty_cart">Ваша корзина пуста!</div>
                                 <form id="list_of_items">
                                     </form>
