добавление значка выбранных товаров

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -58,6 +58,7 @@
                     <div class="tab-nav-4-container">
                     	<div class="basket-tab">Корзина </div>
                     	<img src="https://github.com/bmstu-iu9/utp2020-2-shop/raw/master/img/icons/basket-icon.png">
+                        <div id="basketPurchases" class="basket-tab"></div>
                     </div>
                 </label>
                 <div class="tabs">
