updating the cart and correcting errors

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -131,8 +131,18 @@
                             <div class="basket_contents">
                                 <span class="form-caption list_of_products center">Список товаров</span>
                                 <div class="empty_cart" id="empty_cart">Ваша корзина пуста!</div>
-                                <form id="list_of_items">
-                                    </form>
+                                <table id="table_view"> 
+                                    <tr> 
+                                        <th>Наименование</th> 
+                                        <th>Цена, руб</th>
+                                        <th>Кол-во, шт</th>
+                                        <th>Стоимость, руб</th>
+                                        <th> </th>
+                                    </tr>
+                                </table>
+                                <div class="total" id="total">ИТОГО: 
+                                    <span class="total_num" id="total_num"></span> 
+                                </div>
                                 <button class="button_clean_cart button-submit" id="clean_cart">Очистить корзину</button>
                             </div>
                         </div>
