--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,9 +14,9 @@
     <header сlass="header">
         <div class="header_container">
             <div class="header_logo">Games Store</div>
-            <form class="header_search">
+            <form class="header_search" id="header_search">
                 <div class="header_search_input_wrapper">
-                    <input class="header_search_input" type="text" placeholder="Поиск по сайту" />
+                    <input class="header_search_input" id="header_search_input" type="text" required placeholder="Поиск по сайту"/>
                 </div>
                 <div class="header_search_dropdown">
                     <div data_select class="header_select">
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="header_search_button_wrapper">
-                    <button class="header_search_button" type="submit">
+                    <button class="header_search_button" type="submit" id="header_search_button">
                         <img src="img/icons/search-icon.png" alt="">
                     </button>
                 </div>
@@ -40,7 +40,7 @@
     <!-- Главная часть -->
     <main>
         <div class="main__nav">
-            <div class="main_nav">
+            <div class="main_nav" id="main_nav">
                 <input type="radio" name="tabs" id="tab-nav-1" checked>
                 <label for="tab-nav-1">
                     <div class="tab-nav-1-container">Playstation</div>
@@ -61,6 +61,7 @@
                       <div id="basketPurchases" class="basket-tab"></div>
                     </div>
                 </label>
+                <input type="radio" name="tabs" id="tab-nav-5">
                 <div class="tabs">
                     <div id="tab-1">
                     </div>
@@ -131,21 +132,23 @@
                             <div class="basket_contents">
                                 <span class="form-caption list_of_products center">Список товаров</span>
                                 <div class="empty_cart" id="empty_cart">Ваша корзина пуста!</div>
-                                <table id="table_view"> 
-                                    <tr> 
-                                        <th>Наименование</th> 
+                                <table id="table_view">
+                                    <tr>
+                                        <th>Наименование</th>
                                         <th>Цена, руб</th>
                                         <th>Кол-во, шт</th>
                                         <th>Стоимость, руб</th>
                                         <th> </th>
                                     </tr>
                                 </table>
-                                <div class="total" id="total">ИТОГО: 
-                                    <span class="total_num" id="total_num"></span> 
+                                <div class="total" id="total">ИТОГО:
+                                    <span class="total_num" id="total_num"></span>
                                 </div>
                                 <button class="button_clean_cart button-submit" id="clean_cart">Очистить корзину</button>
                             </div>
                         </div>
+                    </div>
+                    <div id="tab-5">
                     </div>
                 </div>
             </div>
