--- a/src/client/index.html
+++ b/src/client/index.html
@@ -126,7 +126,7 @@
                                     </p>
                                 </div>
                                 <p>
-                                    <button type="submit" class="button-submit">Подтвердить заказ</button>
+                                    <button type="submit" class="button-submit" action="/order-confirmed" method="post">Подтвердить заказ</button>
                                 </p>
                             </form>
                             <div class="basket_contents">
