--- a/src/client/index.html
+++ b/src/client/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+    <link rel="shortcut icon" href="/img/icons/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,700;1,900&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
