--- a/src/client/index.html
+++ b/src/client/index.html
@@ -133,7 +133,7 @@
                         <div class="basket_contents">
                             <span class="form-caption list_of_products center">Список товаров</span>
                             <div class="empty_cart" id="empty_cart">Ваша корзина пуста!</div>
-                            <table id="table_view">
+                            <table class="table_view" id="table_view">
                                 <tr>
                                     <th>Наименование</th>
                                     <th>Цена, руб</th>
