--- a/src/client/index.html
+++ b/src/client/index.html
@@ -383,7 +383,10 @@
     </div>
 </footer>
 <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
-<script src="main.js"></script>
+<script src="js/firebase_submit_form.js"></script>
+<script src="js/header_search_dropdown.js"></script>
+<script src="js/show_information_of_product.js"></script>
+<script src="js/main.js"></script>
 </body>
 
 </html>
