--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,8 +3,18 @@
 
 <head>
     <link rel="shortcut icon" href="/img/icons/favicon.ico"/>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/basket.css" />
+    <link rel="stylesheet" type="text/css" href="css/feedback_form.css" />
+    <link rel="stylesheet" type="text/css" href="css/footer.css" />
+    <link rel="stylesheet" type="text/css" href="css/header.css" />
+    <link rel="stylesheet" type="text/css" href="css/info_about_company.css" />
+    <link rel="stylesheet" type="text/css" href="css/modal_window_with_description.css" />
+    <link rel="stylesheet" type="text/css" href="css/modal_windows.css" />
+    <link rel="stylesheet" type="text/css" href="css/responses.css" />
+    <link rel="stylesheet" type="text/css" href="css/slider.css" />
+    <link rel="stylesheet" type="text/css" href="css/tabs_with_products.css" />
+    <link rel="stylesheet" type="text/css" href="css/general_style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,700;1,900&display=swap">
     <meta charset="utf-8" />
     <link rel="icon" href="data:;base64,=">
     <title>Games Store - интернет-магазин приставок</title>
